--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     header {
       background: var(--primary) url('https://www.reklamzamani.net/dosyalar/dosya/696187828.png') center / cover no-repeat;
       color: var(--light);
-      min-height: 450px;
+      min-height: 300px;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
       position: relative;
       overflow: hidden;
-      padding: 6rem 0;
+      padding: 4rem 0;
     }
 
     header::before {
@@ -68,7 +68,7 @@
     }
 
     .logo {
-      font-size: 3.5rem;
+      font-size: 2.5rem;
       font-weight: 800;
       letter-spacing: 2px;
       color: #ff0000;
@@ -78,7 +78,7 @@
     }
 
     .slogan {
-      font-size: 1.6rem;
+      font-size: 1.2rem;
       margin-top: 10px;
       font-weight: 300;
       color: #ff0000;
@@ -131,12 +131,12 @@
       background: var(--secondary);
       color: var(--light);
       text-decoration: none;
-      font-size: 2rem;
-      padding: 20px;
-      margin: 40px auto;
+      font-size: 1.6rem;
+      padding: 18px;
+      margin: 30px auto;
       border-radius: 10px;
       width: 90%;
-      max-width: 600px;
+      max-width: 500px;
       text-align: center;
       transition: all 0.3s ease;
       box-shadow: 0 6px 12px rgba(0,0,0,0.15);
@@ -160,8 +160,8 @@
     }
 
     .emergency-btn:hover {
-      background: #e64a19;
       transform: translateY(-5px);
+      background: #e64a19;
       box-shadow: 0 8px 16px rgba(0,0,0,0.2);
     }
 
@@ -307,7 +307,6 @@
       text-align: center;
       padding: 3rem 1.5rem;
       margin-top: 80px;
-      position: relative;
     }
 
     footer::before {
@@ -319,65 +318,33 @@
       background: var(--primary);
     }
 
-    /* HESAP MAKİNESİ MODALI */
-    #calculatorToggleBtn {
+    /* HESAP MAKİNESİ STİLİ */
+    #calculatorModal {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      z-index: 999;
-      background: var(--primary);
-      color: white;
-      border: none;
-      border-radius: 50%;
-      width: 60px;
-      height: 60px;
-      font-size: 24px;
-      cursor: pointer;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: transform 0.2s;
-    }
-
-    #calculatorToggleBtn:hover {
-      transform: scale(1.1);
-      background: #b51d0d;
-    }
-
-    .calculator-wrapper {
-      position: fixed;
-      bottom: 90px;
-      right: 20px;
+      background: var(--light);
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.15);
       width: 280px;
-      max-width: 90%;
-      border-radius: 30px;
+      z-index: 999;
       overflow: hidden;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-      background-color: #000;
-      z-index: 998;
       display: none;
+      animation: fadeIn 0.3s ease-in-out;
     }
 
-    .calculator {
-      background-color: #000;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
+    #calculator {
       padding: 20px;
-    }
-
-    .display {
-      background-color: #000;
-      color: white;
-      font-size: 40px;
+      background: var(--dark);
+      color: var(--light);
+      font-size: 30px;
       text-align: right;
-      padding: 15px;
       height: 80px;
-      overflow: hidden;
-      width: 100%;
     }
 
     .buttons {
@@ -385,53 +352,83 @@
       grid-template-columns: repeat(4, 1fr);
       gap: 10px;
       padding: 15px;
-      background-color: #1c1c1e;
-      width: 100%;
+      background: var(--light);
     }
 
     .button {
-      height: 60px;
+      background: var(--dark);
+      color: var(--light);
       font-size: 24px;
+      padding: 20px;
       border: none;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      border-radius: 8px;
       cursor: pointer;
-      transition: background 0.2s ease-in-out;
+      transition: all 0.2s;
     }
 
     .button.operator {
-      background-color: #ff9f0a;
-      color: white;
-      font-weight: 600;
+      background: var(--primary);
     }
 
-    .button.number {
-      background-color: #333333;
-      color: white;
+    .button.equal {
+      background: #2e7d32;
     }
 
     .button.zero {
       grid-column: span 2;
-      border-radius: 50px;
     }
 
     .button.gray {
-      background-color: #a5a5a5;
+      background: #a5a5a5;
     }
 
-    .button.equal {
-      background-color: #ff9500;
-      color: white;
-      font-weight: 600;
+    .button:hover {
+      filter: brightness(1.1);
     }
 
-    @media (max-width: 480px) {
-      .calculator-wrapper {
+    #calculatorToggleBtn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: var(--primary);
+      color: var(--light);
+      font-size: 24px;
+      border: none;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      cursor: pointer;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      z-index: 1000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: transform 0.2s ease;
+    }
+
+    #calculatorToggleBtn:hover {
+      transform: scale(1.1);
+    }
+
+    @media (max-width: 768px) {
+      #calculatorModal {
         width: 90%;
         bottom: 90px;
         right: 10px;
+      }
+
+      #calculatorToggleBtn {
+        width: 50px;
+        height: 50px;
+        font-size: 20px;
+      }
+
+      #calculator {
+        font-size: 24px;
+      }
+
+      .button {
+        font-size: 20px;
       }
     }
   </style>
@@ -519,20 +516,46 @@
   <p>FURKAN OTO KURTARMA - Türkiye'nin En Güvenilir Çekici Hizmeti</p>
 </footer>
 
-<!-- DİNAMİK BİLGİ KUTUSU -->
+<!-- HESAP MAKİNESİ BUTONU -->
+<button id="calculatorToggleBtn" onclick="toggleCalculator()">🧮</button>
+
+<!-- HESAP MAKİNESİ MODALI -->
+<div id="calculatorModal">
+  <div id="calculator">0</div>
+  <div class="buttons">
+    <button class="button gray" onclick="clearDisplay()">C</button>
+    <button class="button gray" onclick="deleteLast()">⌫</button>
+    <button class="button operator" onclick="appendOperator('%')">%</button>
+    <button class="button operator" onclick="appendOperator('/')">÷</button>
+
+    <button class="button" onclick="appendNumber('7')">7</button>
+    <button class="button" onclick="appendNumber('8')">8</button>
+    <button class="button" onclick="appendNumber('9')">9</button>
+    <button class="button operator" onclick="appendOperator('*')">×</button>
+
+    <button class="button" onclick="appendNumber('4')">4</button>
+    <button class="button" onclick="appendNumber('5')">5</button>
+    <button class="button" onclick="appendNumber('6')">6</button>
+    <button class="button operator" onclick="appendOperator('-')">−</button>
+
+    <button class="button" onclick="appendNumber('1')">1</button>
+    <button class="button" onclick="appendNumber('2')">2</button>
+    <button class="button" onclick="appendNumber('3')">3</button>
+    <button class="button operator" onclick="appendOperator('+')">+</button>
+
+    <button class="button zero" onclick="appendNumber('0')">0</button>
+    <button class="button" onclick="appendNumber('.')">.</button>
+    <button class="button equal" onclick="calculateResult()">=</button>
+  </div>
+</div>
+
 <script>
   const facts = [
     "Türkiye'de her yıl yaklaşık 500.000 araç arızalanıyor ve çekiciye ihtiyaç duyuyor.",
     "Otomobil sayısı artarken, yolda kalan araçların %70’i 10 dakika içinde yardım alabiliyor.",
     "Çekici servislerinin hızı, kazalar sonrası can kaybını azaltmada önemli rol oynuyor.",
     "Güvenli sürüş alışkanlıkları, yolda kalmayı %40 oranında azaltabilir.",
-    "Furkan Oto Kurtarma, Bursa merkezli olarak Türkiye'nin tüm illerine hizmet veriyor.",
-    "Furkan Oto Kurtarma, 7/24 hizmet vererek her zaman yanınızda.",
-    "Furkan Oto Kurtarma, 3 yılı aşkın tecrübesiyle sektördeki en güvenilir isimlerden biridir.",
-    "Furkan Oto Kurtarma, sadece çekici değil, aynı zamanda yol yardım hizmetleri de sunuyor.",
-    "Furkan Oto Kurtarma, müşteri memnuniyetini ön planda tutarak hizmet veriyor.",
-    "Furkan Oto Kurtarma, araç kurtarma işlemlerinde uzman ekipman ve araçlar kullanıyor.",
-    "Furkan Oto Kurtarma, 7/24 hizmet vererek her zaman yanınızda.",
+    "Furkan Oto Kurtarma, Bursa merkezli olarak Türkiye'nin tüm illerine hizmet vermektedir."
   ];
 
   function getRandomFact() {
@@ -542,53 +565,13 @@
   document.addEventListener("DOMContentLoaded", () => {
     document.getElementById("factText").textContent = getRandomFact();
   });
-</script>
 
-<!-- HESAP MAKİNESİ BUTONU (MODAL AÇICI) -->
-<button id="calculatorToggleBtn" onclick="toggleCalculator()">
-  <i class="fas fa-calculator"></i>
-</button>
-
-<!-- HESAP MAKİNESİ MODALI -->
-<div class="calculator-wrapper" id="calculatorModal">
-  <div class="calculator">
-    <div class="display" id="display">0</div>
-    <div class="buttons">
-      <button class="button gray" onclick="clearDisplay()">C</button>
-      <button class="button gray" onclick="deleteLast()">⌫</button>
-      <button class="button gray" onclick="appendOperator('%')">%</button>
-      <button class="button operator" onclick="appendOperator('/')">÷</button>
-
-      <button class="button number" onclick="appendNumber('7')">7</button>
-      <button class="button number" onclick="appendNumber('8')">8</button>
-      <button class="button number" onclick="appendNumber('9')">9</button>
-      <button class="button operator" onclick="appendOperator('*')">×</button>
-
-      <button class="button number" onclick="appendNumber('4')">4</button>
-      <button class="button number" onclick="appendNumber('5')">5</button>
-      <button class="button number" onclick="appendNumber('6')">6</button>
-      <button class="button operator" onclick="appendOperator('-')">−</button>
-
-      <button class="button number" onclick="appendNumber('1')">1</button>
-      <button class="button number" onclick="appendNumber('2')">2</button>
-      <button class="button number" onclick="appendNumber('3')">3</button>
-      <button class="button operator" onclick="appendOperator('+')">+</button>
-
-      <button class="button number zero" onclick="appendNumber('0')">0</button>
-      <button class="button number" onclick="appendNumber('.')">.</button>
-      <button class="button equal" onclick="calculateResult()">=</button>
-    </div>
-  </div>
-</div>
-
-<!-- HESAP MAKİNESİ JS FONKSİYONLARI -->
-<script>
-  const display = document.getElementById("display");
+  // Hesap Makinesi Fonksiyonları
   let currentInput = "0";
   let operatorPending = false;
 
   function updateDisplay() {
-    display.textContent = currentInput;
+    document.getElementById("calculator").textContent = currentInput;
   }
 
   function appendNumber(num) {
@@ -597,6 +580,7 @@
     } else {
       currentInput += num;
     }
+    operatorPending = false;
     updateDisplay();
   }
 
@@ -626,23 +610,23 @@
 
   function calculateResult() {
     try {
-      const result = eval(currentInput.replace(/[^-()\d/*+.]/g, ""));
+      const result = eval(currentInput);
       currentInput = result.toString();
       operatorPending = false;
+      updateDisplay();
     } catch (error) {
       currentInput = "Hata";
+      updateDisplay();
     }
-    updateDisplay();
   }
 
-  // Modal Aç/Kapa
   function toggleCalculator() {
     const modal = document.getElementById("calculatorModal");
     modal.style.display = modal.style.display === "none" ? "block" : "none";
   }
 
-  // ESC tuşu ile kapat
-  document.addEventListener("keydown", function(e) {
+  // ESC ile kapatma
+  document.addEventListener("keydown", (e) => {
     if (e.key === "Escape") {
       document.getElementById("calculatorModal").style.display = "none";
     }
