--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       font-size: 3.5rem;
       font-weight: 800;
       letter-spacing: 2px;
-      color: #ff0000;
+      color: #7554f0;
       position: relative;
       z-index: 2;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
@@ -67,7 +67,7 @@
       font-size: 1.6rem;
       margin-top: 10px;
       font-weight: 300;
-      color: #ff0000;
+      color: #00e1ff;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
       position: relative;
       z-index: 2;
