--- a/index.html
+++ b/index.html
@@ -476,6 +476,8 @@
     <li><a href="#services">Hizmetlerimiz</a></li>
     <li><a href="#fun-facts">Bunları Biliyor Muydunuz?</a></li>
     <li><a href="#contact">İletişim</a></li>
+    <li><a href="#gallery">Fotoğraflar</a></li>
+    <li><a href="#map">Harita</a></li>
   </ul>
 </nav>
 
@@ -517,6 +519,10 @@
       </p>
     </div>
   </section>
+  <!-- HARİTA -->
+  <h2>Harita</h2>
+  <section id="map">
+    <p>Furkan Oto Kurtarma'nın merkezi konumu:</p>
 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d381.06449440751015!2d29.0993805!3d40.1753297!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14ca3c29999c6bbb%3A0x78c0f4a97cf6fc03!2zWsO8bXLDvHRldmxlciwgS3VydGJhc2FuIENkLiBObzoxNTQsIDE2MzQwIFnEsWxkxLFyxLFtL0J1cnNh!5e0!3m2!1sen!2str!4v1751205821291!5m2!1sen!2str" width="100%" height="550" style="border:0; border-radius:16px; margin-bottom:32px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   <!-- HİZMETLERİMİZ -->
   <section id="services">
@@ -568,9 +574,7 @@
       </div>
     </div>
   </section>
-
 </div>
-
 <!-- FOOTER -->
 <footer>
   <p>FURKAN OTO KURTARMA - Türkiye'nin En Güvenilir Çekici Hizmeti</p>
