--- a/index.html
+++ b/index.html
@@ -728,6 +728,7 @@
           <h3>Telefon</h3>
           <div class="phone">
             <i class="fas fa-phone-alt"></i> 0532 154 10 43
+            <i class="fas fa-phone-alt"></i> 0532 205 11 92
           </div>
           <p>7/24 aktif destek hattı</p>
         </div>
