--- a/index.html
+++ b/index.html
@@ -727,8 +727,16 @@
         <div class="contact-card">
           <h3>Telefon</h3>
           <div class="phone">
-            <i class="fas fa-phone-alt"></i> 0532 154 10 43
-            <i class="fas fa-phone-alt"></i> 0532 205 11 92
+            <span style="display:flex; flex-direction:column; align-items:center; gap:8px;">
+              <span style="display:flex; align-items:center; gap:8px;">
+                <i class="fas fa-phone-alt"></i>
+                <a href="tel:05321541043" style="color:inherit; text-decoration:none;">0532 154 10 43</a>
+              </span>
+              <span style="display:flex; align-items:center; gap:8px;">
+                <i class="fas fa-phone-alt"></i>
+                <a href="tel:05322051192" style="color:inherit; text-decoration:none;">0532 205 11 92</a>
+              </span>
+            </span>
           </div>
           <p>7/24 aktif destek hattı</p>
         </div>
