--- a/index.html
+++ b/index.html
@@ -534,6 +534,10 @@
       <img src="https://i.hizliresim.com/q3nm388.jpg" class="slide active" alt="Furkan Oto Kurtarma 1">
       <img src="https://i.hizliresim.com/3nu5q5k.jpg" class="slide" alt="Furkan Oto Kurtarma 2">
       <img src="https://i.hizliresim.com/goehduc.jpg" class="slide" alt="Furkan Oto Kurtarma 3">
+      <img src="https://i.hizliresim.com/bh35z0x.jpg" class="slide" alt="Furkan Oto Kurtarma 4">
+      <img src="https://i.hizliresim.com/2cpdhtw.jpg" class="slide" alt="Furkan Oto Kurtarma 5">
+      <img src="https://i.hizliresim.com/5rweeqy.jpg" class="slide" alt="Furkan Oto Kurtarma 6">
+      <img src="https://i.hizliresim.com/95n31ha.jpg" class="slide" alt="Furkan Oto Kurtarma 7">
     </div>
     <button class="slider-btn next" onclick="changeSlide(1)">&#10095;</button>
   </div>
@@ -543,7 +547,6 @@
     <span class="dot" onclick="goToSlide(2)"></span>
   </div>
 </section>
-
 <style>
   .slider {
     position: relative;
