--- a/index.html
+++ b/index.html
@@ -458,16 +458,14 @@
         bottom: 90px;
         right: 10px;
       }
-    }
-  </style>
-<!-- HEADER -->
-<header>
-  ...
-<!-- HEADER -->
-<header>
-  <div class="logo">FURKAN OTO KURTARMA</div>
-  <div class="slogan">Türkiye'nin En Hızlı 7/24 Çekici Hizmeti</div>
-</header>
+    </style>
+  </head>
+  <body>
+  <!-- HEADER -->
+  <header>
+    <div class="logo">FURKAN OTO KURTARMA</div>
+    <div class="slogan">Türkiye'nin En Hızlı 7/24 Çekici Hizmeti</div>
+  </header>
 
 <!-- NAVIGATION -->
 <nav>
