--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       font-size: 3.5rem;
       font-weight: 800;
       letter-spacing: 2px;
-      color: #7554f0;
+      color: #ff0000;
       position: relative;
       z-index: 2;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
@@ -67,7 +67,7 @@
       font-size: 1.6rem;
       margin-top: 10px;
       font-weight: 300;
-      color: #00e1ff;
+      color: #eeff00;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
       position: relative;
       z-index: 2;
@@ -464,21 +464,7 @@
   <!-- HEADER -->
   <header>
     <div class="logo">FURKAN OTO KURTARMA</div>
-    <div class="slogan">Türkiye'nin En Hızlı 7/24 Çekici Hizmeti</div>
-  </header>
-
-<!-- NAVIGATION -->
-<nav>
-  <ul>
-    <li><a href="#about">Hakkımızda</a></li>
-    <li><a href="#services">Hizmetlerimiz</a></li>
-    <li><a href="#fun-facts">Bunları Biliyor Muydunuz?</a></li>
-    <li><a href="#contact">İletişim</a></li>
-    <li><a href="#gallery">Fotoğraflar</a></li>
-    <li><a href="#map">Harita</a></li>
-  </ul>
-</nav>
-
+  </header
 <!-- MAIN CONTENT -->
 <div class="container">
 
